guardando en main

--- a/Ramas/rama.html
+++ b/Ramas/rama.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aprendiendo git</title>
+    <style></style>
 </head>
 <body>
-    <h1>mi primera rama</h1>
+    <h1>rama con conflicto en el principal</h1>
+    <ul>
+        <li>objeto 1</li>
+        <li>objeto 1</li>
+        <li>objeto 1</li>
+        <li>objeto 1</li>
+        <li>objeto 1</li>
+        <li>objeto 1</li>
+        <li>objeto 1</li>
+    </ul>
 </body>
 </html>
