--- a/Ramas/rama.html
+++ b/Ramas/rama.html
@@ -6,6 +6,9 @@
     <title>aprendiendo git</title>
 </head>
 <body>
-    <h1>mi primera rama</h1>
+    <h1>mi primera rama con conflicto para css</h1>
+    <ol>
+        <li>articulo 1</li>
+    </ol>
 </body>
 </html>
