--- a/Ramas/rama.html
+++ b/Ramas/rama.html
@@ -17,6 +17,7 @@
         <li>otoño 23</li>
         <li>primavera 34</li>
         <li>inverno 44</li>
+        <li>inverno 56</li>
     </ul>
 </body>
 </html>
